# Fundamentals-of-algorithmization-and-programming

353501/Богуцкий Т.С./LabWork_1/Task_1/: Task1.pro  mainwindow.cpp  rectangle.cpp  rectangle.h  wheel.cpp  wheel.h
353501/Богуцкий Т.С./LabWork_1/Task_2/: 2.pro  mainwindow.cpp  mainwindow.h  paintscene.h  rectangle.cpp  shape.h  stareight.cpp  stareight.h  starfive.cpp  starfive.h  starsix.cpp  starsix.h
353501/Романовский М.Д./LabWork_2/: CMakeLists.txt
